--- a/index.html
+++ b/index.html
@@ -132,30 +132,32 @@
                             <h2>Doctor and Make an Appointment</h2>  
                         </div>
                         <form class="search-wrap">
-                            <div class="select-box">
-                                <img src="assets/images/icons/map.svg" alt="map">
-                                <select>
-                                    <option>Select Area</option>
-                                    <option>Select Area</option>
-                                    <option>Select Area</option>
-                                </select>
-                            </div>
-                            <div class="select-box date">
-                                <img src="assets/images/icons/calendar.svg" alt="map">
-                                <select>
-                                    <option>Select Date</option>
-                                    <option>Select Date</option>
-                                    <option>Select Date</option>
-                                </select>
-                            </div>
-                            <div class="select-box specialist">
-                                <img src="assets/images/icons/specialist.svg" alt="map">
-                                <select>
-                                    <option>Select Specialist</option>
-                                    <option>Select Specialist</option>
-                                    <option>Select Specialist</option>
-                                </select>
-                            </div>
+                            <ul class="search-items d-flex flex-wrap align-items-center ">
+                                <li class="select-box">
+                                    <img src="assets/images/icons/map.svg" alt="map">
+                                    <select>
+                                        <option>Select Area</option>
+                                        <option>Select Area</option>
+                                        <option>Select Area</option>
+                                    </select>
+                                </li>
+                                <li class="select-box">
+                                    <img src="assets/images/icons/calendar.svg" alt="map">
+                                    <select>
+                                        <option>Select Date</option>
+                                        <option>Select Date</option>
+                                        <option>Select Date</option>
+                                    </select>
+                                </li>
+                                <li class="select-box">
+                                    <img src="assets/images/icons/specialist.svg" alt="map">
+                                    <select>
+                                        <option>Select Specialist</option>
+                                        <option>Select Specialist</option>
+                                        <option>Select Specialist</option>
+                                    </select>
+                                </li>
+                            </ul>
                             <button class="search-btn">Search</button>
                           </form> 
                     </div>
