--- a/search.html
+++ b/search.html
@@ -123,8 +123,49 @@
                                 </ul>
                             </div>
                          </div>
-                    </header>
+                    </header>   
+                    <div class="search-wrep mt-30">
+                        <div class="cardiolog">
+                            <h3>Cardiologist</h3>
+                             <span>Address :Yonkers, NY 16221</span>
+                        </div>
+                        <div class="filter">
+                            <img src="/assets/images/icons/filter.svg" alt="filter">
+                            <span>Filter Search</span>
+                        </div>
+                    </div>        
+                    
+                    <!-- search-item area start -->
+                    <div class="secrh-item-area">
+                        <div class="row">
+                            <div class="col-xl-4">
+                                <div class="secrh-wrap">
+                                    <div class="secrh-title">
+                                        <a href="index.html">
+                                            <img src="assets/images/home/secrh-item-01.png" alt="secrh-item">
+                                            <h3>Dr. Vicky Chadda</h3>
+                                            <span>MBBS, FCPS </span>
+                                        </a>
+                                        <span class="secrh-title-icon">
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                        </span>
+                                        <h4>Sain Jermain Clinic</h4>
+                                        <span class="location">
+                                            <i class="fa fa-star" aria-hidden="true"></i>
+                                            1245 Street Down, Yonkers
+                                        </span>
+                                        <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Vestibulum scelerisque aliquet mattis auctor.</p>
 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- search-item area end -->
          <!-- content area end -->
     </div>
     
