--- a/search.html
+++ b/search.html
@@ -75,7 +75,7 @@
         </div>
         <!-- left-sidebar end -->
         <!-- content area stert -->
-         <div class="main-body">
+         <div class="main-body">   
                     <header class="header-area">
                         <div class="d-flex align-items-center">
                             <div class="menu-btn">
@@ -133,6 +133,40 @@
                             <img src="assets/images/icons/filter.svg" alt="filter">
                             <span>Filter Search</span>
                         </div>
+                        <div class="select-area filter-deta mt-30 ">
+                            <div class="section-title">
+                                <h2>Doctor and Make an Appointment</h2>  
+                            </div>
+                            <form class="search-wrap">
+                                <ul class="search-items d-flex flex-wrap align-items-center ">
+                                    <li class="select-box">
+                                        <img src="assets/images/icons/map.svg" alt="map">
+                                        <select>
+                                            <option>Select Area</option>
+                                            <option>Select Area</option>
+                                            <option>Select Area</option>
+                                        </select>
+                                    </li>
+                                    <li class="select-box">
+                                        <img src="assets/images/icons/calendar.svg" alt="map">
+                                        <select>
+                                            <option>Select Date</option>
+                                            <option>Select Date</option>
+                                            <option>Select Date</option>
+                                        </select>
+                                    </li>
+                                    <li class="select-box">
+                                        <img src="assets/images/icons/specialist.svg" alt="map">
+                                        <select>
+                                            <option>Select Specialist</option>
+                                            <option>Select Specialist</option>
+                                            <option>Select Specialist</option>
+                                        </select>
+                                    </li>
+                                </ul>
+                                <button class="search-btn">Search</button>
+                              </form> 
+                        </div>
                     </div>        
                     <!-- search-item area start -->
                     <div class="secrh-item-area">
@@ -169,11 +203,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap mb-55">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/profile-01.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
