--- a/doctor.html
+++ b/doctor.html
@@ -133,7 +133,7 @@
             <!-- doctor-profile area start -->
             <section class="doctor-profile">
                 <div class="row">
-                    <div class="col-xl-9">
+                    <div class="col-xl-8">
                         <div class="profile-wepr">
                             <div class="profile">
                                 <img class="profile-img" src="assets/images/home/profile-img-01.png" alt="profile-img">
@@ -157,10 +157,167 @@
                                         <p>105 Reviews</p>
                                     </div>
                                 </div>
+                               
+                            </div>
+                            <div class="about-area">
+                                <h3>About Me</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    Vestibulum scelerisque aliquet mattis auctor.
+                                     Metus pellentesque pulvinar nulla interdum imperdiet. Porttitor risus feugiat nisi,
+                                      nunc faucibus. Proin mus bibendum diam facilisis sem sollicitudin sed. 
+                                      Odio enim convallis
+                                     ullamcorper diam amet egestas odio etiam et. </p>
+                                     <div class="about-itam mt-25">
+                                        <div class="row">
+                                            <div class="col-xl-6">
+                                                <div class="experiene">
+                                                    <h2>Work & Experience</h2>
+                                                    <span>2020- Present (2 years)</span>
+                                                    <h3>Surgiscope Clinic & Medical</h3>
+                                                    <span>2020- Present (2 years)</span>
+                                                    <h3>New IBN Sina Hospital & Diagnostic</h3>
+                                                </div>    
+                                            </div>
+                                            <div class="col-xl-6">
+                                                <div class="specialitie">
+                                                    <h2>Specialities</h2>
+                                                    <ul>
+                                                        <li>Women’s health services</li>
+                                                        <li>Pregnancy care</li>
+                                                        <li>Surgical Procedures</li>
+                                                        <li>Speciality care</li>
+                                                    </ul>
+                                                </div> 
+                                            </div>
+                                     </div>
+                                     </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3"></div>
+                    <div class="col-xl-4">
+                        <div class="profile-addres">
+                            <div class="map-location">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d58436.59365084692!2d90.33257147910156!3d23.737139200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1635573421526!5m2!1sen!2sbd" width="100%;" height="200px;" 
+                                style="border-radius: 12px; border: none;"
+                                 allowfullscreen="" loading="lazy"></iframe>
+                            </div>
+                            <ul>
+                                <li class="addres-itam">
+                                    <img src="assets/images/icons/map-loction.svg" alt="map">
+                                    <div class="addres-itam-text">
+                                        <h3>Address</h3>
+                                        <span>1245 Street Down Ave, Yonkers
+                                            San Francisco</span>
+                                    </div>
+                                </li>
+                                <li class="addres-itam">
+                                    <img src="assets/images/icons/phone.svg" alt="phone">
+                                    <div class="addres-itam-text">
+                                        <h3>Phone</h3>
+                                        <span>+88 000222 6666</span>
+                                    </div>
+                                </li>
+                                <li class="addres-itam">
+                                    <img src="assets/images/icons/mail.svg" alt="mail">
+                                    <div class="addres-itam-text">
+                                        <h3>Email</h3>
+                                        <span>vickychadda@gmail.com</span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-4">
+                        <div class="location-area mt-30">
+                            <h2>Chamber Location</h2>
+                            <ul>
+                                <li class="location-wrep">
+                                    <div class="sub-location">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="location-text">
+                                        <h3>CSCR Surgical Center</h3>
+                                        <p>MDS- Curdiology, BDS</p>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down, Yonkers</span>
+                                        <h3>Monday to Friday</h3>
+                                        <p>10:00 AM - 3:30 PM</p>
+                                        <h3>Sunday</h3>
+                                        <span class="location-text-color">Sunday</span>
+                                    </div>
+                                </li>
+                                <li class="location-wrep">
+                                    <div class="sub-location">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="location-text">
+                                        <h3>CSCR Surgical Center</h3>
+                                        <p>MDS- Curdiology, BDS</p>
+                                        <span><i class="fa fa-map-marker" aria-hidden="true"></i>1245 Street Down, Yonkers</span>
+                                        <h3>Monday to Friday</h3>
+                                        <p>10:00 AM - 3:30 PM</p>
+                                        <h3>Sunday</h3>
+                                        <span class="location-text-color">Sunday</span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-8">
+                        <div class="recent-reviews-area mt-30">
+                            <h2>Recent Reviews</h2>
+                            <div class="recent-reviews-wrep">
+                                <img src="assets/images/home/reviews-01.png" alt="reviews">
+                                <div class="reviews-itam">
+                                    <h3>Steve John</h3>
+                                    <span class="reviews-point">4.3</span>
+                                    <div class="sergen-icon">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <span class="icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                     Vestibulum scelerisque aliquet mattis auctor. 
+                                     Metus pellentesque pulvinar.</p>
+                            </div>
+                            <div class="recent-reviews-wrep mt-25">
+                                <img src="assets/images/home/reviews-02.png" alt="reviews">
+                                <div class="reviews-itam">
+                                    <h3>Steve John</h3>
+                                    <span class="reviews-point">3.5</span>
+                                    <div class="sergen-icon">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <span class="icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                     Vestibulum scelerisque aliquet mattis auctor. 
+                                     Metus pellentesque pulvinar.</p>
+                            </div>
+                            <div class="recent-reviews-wrep mt-25">
+                                <img src="assets/images/home/reviews-03.png" alt="reviews">
+                                <div class="reviews-itam">
+                                    <h3>Steve John</h3>
+                                    <span class="reviews-point">5</span>
+                                    <div class="sergen-icon">
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <span class="icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                     Vestibulum scelerisque aliquet mattis auctor. 
+                                     Metus pellentesque pulvinar.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- doctor-profile area end -->
