--- a/search.html
+++ b/search.html
@@ -174,11 +174,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap mb-55">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/secrh-item-01.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -232,11 +232,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap mb-55">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/secrh-item-04.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -261,11 +261,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/secrh-item-05.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -290,11 +290,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/secrh-item-02.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -319,11 +319,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-6">
                                 <div class="secrh-wrap">
                                     <div class="secrh-title">
-                                            <a href="index.html">
+                                            <a href="doctor.html">
                                                 <img src="assets/images/home/secrh-item-01.png" alt="secrh-item">
                                             </a>
                                                 <div class="secrh-title-text">
-                                                    <a href="index.html"><h3>Dr. Vicky Chadda</h3></a>
+                                                    <a href="doctor.html"><h3>Dr. Vicky Chadda</h3></a>
                                                     <h5>MBBS, FCPS </h5>
                                                     <span>
                                                         <i class="fa fa-star" aria-hidden="true"></i>
