--- a/doctor.html
+++ b/doctor.html
@@ -141,7 +141,7 @@
                                     <h2>Dr. Vicky Chadda</h2>
                                     <h4>MBBS, FCPS </h4>
                                     <span><img src="assets/images/icons/doler-icon.svg" alt="doler-icon">$59.00 per hour</span>
-                                    <a href="index.html">
+                                    <a href="bookingdoctor.html">
                                         <h3>Book Appointment<i class="fa fa-arrow-right" aria-hidden="true"></i></h3>
                                     </a>
                                 </div>
@@ -153,11 +153,9 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <span class="icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
-                                        
                                         <p>105 Reviews</p>
                                     </div>
                                 </div>
-                               
                             </div>
                             <div class="about-area">
                                 <h3>About Me</h3>
@@ -169,7 +167,7 @@
                                      ullamcorper diam amet egestas odio etiam et. </p>
                                      <div class="about-itam mt-25">
                                         <div class="row">
-                                            <div class="col-xl-6">
+                                            <div class="col-xl-6 col-md-6 col-12">
                                                 <div class="experiene">
                                                     <h2>Work & Experience</h2>
                                                     <span>2020- Present (2 years)</span>
@@ -178,7 +176,7 @@
                                                     <h3>New IBN Sina Hospital & Diagnostic</h3>
                                                 </div>    
                                             </div>
-                                            <div class="col-xl-6">
+                                            <div class="col-xl-6 col-md-6 col-12">
                                                 <div class="specialitie">
                                                     <h2>Specialities</h2>
                                                     <ul>
@@ -194,7 +192,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 ">
                         <div class="profile-addres">
                             <div class="map-location">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d58436.59365084692!2d90.33257147910156!3d23.737139200000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1635573421526!5m2!1sen!2sbd" width="100%;" height="200px;" 
