--- a/bookingdoctor.html
+++ b/bookingdoctor.html
@@ -81,7 +81,7 @@
                             <div class="menu-btn">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                             </div>
-                            <ul class="header-title doctor">
+                            <ul class="header-title doctor booking-doctor">
                                 <li>
                                     <a href="search.html">Search<i class="fa fa-chevron-right" aria-hidden="true"></i>
                                     </a>
@@ -333,7 +333,7 @@
                                         </ul>
                                     </div>
                                     <div class="pay">
-                                        <a href="doctor.html">
+                                        <a href="checkout.html">
                                             <button class="pay-btn">Proceed to Pay</button>
                                         </a>
                                     </div>
@@ -444,7 +444,7 @@
                                     </div>
                             </div>
                             <div class="pay">
-                                <a href="doctor.html">
+                                <a href="checkout.html">
                                     <button class="pay-btn">Proceed to Pay</button>
                                 </a>
                             </div>
