--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,7 @@
                       </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="appointment.html">
                         <i class="fa fa-calendar" aria-hidden="true"></i>
                         Appointment
                       </a>
@@ -160,7 +160,6 @@
                             </div>
                         </div>
                     </div>  
-                    
                     <table >
                     <table class="booking-item">
                         <tbody class="booking-item-list">
@@ -197,7 +196,42 @@
                 <div class="payment-area">
                     <h2>Payment</h2>
                     <h3>Card Type</h3>
-                    
+                    <ul class="card-item">
+                        <li><img src="assets/images/icons/card-item-01.svg" alt="card-item"></li>
+                        <li><img src="assets/images/icons/card-item-02.svg" alt="card-item"></li>
+                        <li><img src="assets/images/icons/card-item-03.svg" alt="card-item"></li>
+                        <li><img src="assets/images/icons/card-item-04.svg" alt="card-item"></li>
+                        <li class="add-new"><i class="fa fa-plus" aria-hidden="true"></i><span>Add New</span></li>
+                    </ul>
+                    <form>
+                        <div class="patient-data">
+                            <label class="patient-title">Card Holder Name</label>
+                            <input class="patient-placeholder" type="text" placeholder="John Doe">
+                        </div>
+                        <div class="patient-data">
+                            <label class="patient-title">Card Number</label>
+                            <input id="card-number" class="patient-placeholder" type="text" placeholder="1254 1256 3256 2154" required maxlength="19">
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="patient-data">
+                                    <label class="patient-title">Expiration Date</label>
+                                    <input id="card-exp" class="patient-placeholder" placeholder="05/23" type="text" maxlength="5" required>
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="patient-data">
+                                    <label class="patient-title">CVV</label>
+                                    <input id="card-ccv" class="patient-placeholder" placeholder="566" type="text" maxlength="3" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pay">
+                            <a href="checkout.html">
+                                <button class="pay-btn">Confirm Payment</button>
+                            </a>
+                        </div>
+                    </form>
                 </div>
                 <!-- payment area end -->
             </div>
