--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                           </a>
                     </li>
                     <li>
-                        <a href="index.html">
+                        <a href="appointment.html">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
                             Appointment
                           </a>
