--- a/checkout.html
+++ b/checkout.html
@@ -160,7 +160,6 @@
                             </div>
                         </div>
                     </div>  
-                    <table >
                     <table class="booking-item">
                         <tbody class="booking-item-list">
                           <tr>
@@ -183,15 +182,16 @@
                             <th>Booking Fee</th>
                             <td>$12</td>
                           </tr>
-                        </tbody>
-                        <tr class="tolal">
+                          <tr class="tolal">
                             <th>Total</th>
                             <td>$72</td>
                         </tr>
+                    </tbody>
+                        
                     </table>
                 </div>
             </div>
-            <div class="col-xl-8">
+            <div class="col-xl-8 col-12">
                 <!-- payment area start -->
                 <div class="payment-area">
                     <h2>Payment</h2>
