--- a/voice.html
+++ b/voice.html
@@ -130,7 +130,26 @@
                             </div>
                         </div>
                     </header>  
-            
+            <div class="voice-area">
+                <div class="voice-head">
+                    <div class="voice-left-side">
+                        <img src="assets/images/icons/voice.png" alt="voice">
+                        <h5>John Doe</h5>
+                    </div>
+                    <div class="voice-right-side">
+                        <a href="voice.html"><i class="fa fa-commenting" aria-hidden="true"></i></a>
+                        <a href="voice.html"><i class="fa fa-arrows-alt" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                <div class="voice-werp">
+                    <img src="assets/images/home/secrh-item-01.png" alt="voice">
+                    <h3>Dr. Vicky Chadda</h3>
+                    <span>05:35</span>
+                    <div class="voice-item">
+                        
+                    </div>
+                </div>
+            </div>
 
         <!-- content area end -->
         </div>
