--- a/review.html
+++ b/review.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>video</title>
+    <title>review</title>
      <!-- bootstrap CSS file -->
      <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
      <!-- font-awesome CSS file -->
@@ -76,7 +76,7 @@
         <!-- left-sidebar end -->
         <!-- content area stert -->
         <div class="main-body">   
-                    <header class="header-area">
+            <header class="header-area">
                         <div class="d-flex align-items-center">
                             <div class="menu-btn">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
@@ -86,7 +86,11 @@
                                     <a href="appointment.html">Appointment<i class="fa fa-chevron-right" aria-hidden="true"></i>
                                     </a>
                                 </li>
-                                <li>Video Call</li>
+                                <li>
+                                    <a href="appointment.html">Video Call<i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                    </a>
+                                </li>
+                                <li>Review</li>
                             </ul>
                         </div>
                         <div class="right-side">
@@ -129,51 +133,34 @@
                                 </ul>
                             </div>
                         </div>
-                    </header>  
-           <!-- video area start -->
-              <div class="video-area">
-                    <div class="video-caller-name">
-                        <div class="video-time">
-                            <i class="fa fa-user" aria-hidden="true"></i>
-                            <div class="caller-id">
-                                <h3>Dr. Vicky Chadda & John Doe</h3>
-                                <span>05:35</span>
+            </header>  
+            <!-- review area start -->
+             <div class="review-area">
+                 <div class="row justify-content-center">
+                        <div class="col-xl-8">
+                            <div class="appointment-wrep text-center">
+                                <img class="profile-img" src="assets/images/home/profile-img-01.png" alt="profile-img">
+                                <h2>Dr. Vicky Chadda</h2>
+                                <h4>MBBS, FCPS </h4>
+                                <h3>How was your experience with Dr. Vicky Chadda? </h3> 
+                                <div class="secrh-title-text ">
+                                    <span>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <i class="fa fa-star" aria-hidden="true"></i>
+                                        <span class="secrh-icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
+                                    </span>
+                                 </div>
+                                 <form class="review-comment">
+                                    <textarea  name="text" id="review-text" placeholder="Write a review...."></textarea>
+                                    <button class="review-btn-cancel">Cancel</button>
+                                    <button class="review-btn-send">Send Review</button>
+                                 </form>
                             </div>
                         </div>
-                        <a href="message.html" class="video-text-icon">
-                            <i class="fa fa-commenting" aria-hidden="true"></i>
-                        </a>
-                    </div>
-                 <div class="video-wrap">
-                     <h3>Dr. Vicky Chadda</h3>
-                     <img class="out-video" src="assets/images/home/video-01.png" alt="video">
-                    <div class="row">
-                        <div class="col-xl-8 offset-xl-2">
-                            <ul class="video-btn-item">
-                                <li>
-                                    <button><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
-                                </li>
-                                <li>
-                                   <button><i class="fa fa-microphone" aria-hidden="true"></i></button>
-                               </li>
-                               <li>
-                                     <a href="review.html">
-                                        <div class="end-call mt-0">
-                                            <span></span>
-                                       </div>
-                                     </a>
-                               </li>
-                               <li>
-                                   <button><i class="fa fa-video-camera" aria-hidden="true"></i></button>
-                               </li>
-                               <li>
-                                   <button><i class="fa fa-desktop" aria-hidden="true"></i></button>
-                               </li>
-                            </ul>
-                        </div>
-                    </div>
-                 </div>   
-              </div>      
+                 </div>
+             </div>
         <!-- content area end -->
         </div>
    </div>
