--- a/appointment.html
+++ b/appointment.html
@@ -150,7 +150,7 @@
                 <ul class="appointment-item">
                     <li><a class="voice-btn" href="voice.html"><button>Voice Call</button></a></li>
                     <li> <a class="video-btn" href="video.html"><button>Video Call</button></a></li>
-                    <li> <a class="message-btn" href="video.html"><button>Message</button></a></li>
+                    <li> <a class="message-btn" href="message.html"><button>Message</button></a></li>
                 </ul>
             </div>
 
