--- a/checkout.html
+++ b/checkout.html
@@ -49,7 +49,7 @@
                       </a>
                 </li>
                 <li>
-                    <a href="index.html">
+                    <a href="profile.html">
                         <i class="fa fa-user" aria-hidden="true"></i>
                         Profile
                       </a>
