--- a/editprofile.html
+++ b/editprofile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>review</title>
+    <title>edit profile</title>
      <!-- bootstrap CSS file -->
      <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
      <!-- font-awesome CSS file -->
@@ -76,21 +76,17 @@
         <!-- left-sidebar end -->
         <!-- content area stert -->
         <div class="main-body">   
-            <header class="header-area">
+                    <header class="header-area">
                         <div class="d-flex align-items-center">
                             <div class="menu-btn">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                             </div>
                             <ul class="header-title doctor booking-doctor">
                                 <li>
-                                    <a href="appointment.html">Appointment<i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                    <a href="profile.html">Profile<i class="fa fa-chevron-right" aria-hidden="true"></i>
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="appointment.html">Video Call<i class="fa fa-chevron-right" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                                <li>Review</li>
+                                <li>Edit Profile</li>
                             </ul>
                         </div>
                         <div class="right-side">
@@ -133,44 +129,23 @@
                                 </ul>
                             </div>
                         </div>
-            </header>  
-            <!-- review area start -->
-             <div class="review-area">
-                 <div class="row justify-content-center">
-                        <div class="col-xl-8">
-                            <div class="appointment-wrep text-center">
-                                <img class="profile-img" src="assets/images/home/profile-img-01.png" alt="profile-img">
-                                <h2>Dr. Vicky Chadda</h2>
-                                <h4>MBBS, FCPS </h4>
-                                <h3>How was your experience with Dr. Vicky Chadda? </h3> 
-                                <div class="secrh-title-text ">
-                                    <span>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                        <span class="secrh-icon-color"><i class="fa fa-star" aria-hidden="true"></i></span>
-                                    </span>
-                                 </div>
-                                 <form class="review-comment">
-                                    <textarea  name="text" id="review-text" placeholder="Write a review...."></textarea>
-                                    <button class="review-btn-cancel">Cancel</button>
-                                    <button class="review-btn-send">Send Review</button>
-                                 </form>
-                            </div>
-                        </div>
-                 </div>
-             </div>
+                    </header> 
+
+
+
+
+
+
         <!-- content area end -->
         </div>
-   </div>
-    <!-- JS here -->
-    <!-- jquery-1.12.4.min core JS file -->
-    <script src="assets/js/jquery-1.12.4.min.js"></script>
-    <!-- bootstrap core JS file -->
-    <script src="assest/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <!-- custom core JS file -->
-    <script src="assets/js/custom.js"></script>
-</body>
-</html>
+    </div>
+     <!-- JS here -->
+     <!-- jquery-1.12.4.min core JS file -->
+     <script src="assets/js/jquery-1.12.4.min.js"></script>
+     <!-- bootstrap core JS file -->
+     <script src="assest/js/popper.min.js"></script>
+     <script src="assets/js/bootstrap.min.js"></script>
+     <!-- custom core JS file -->
+     <script src="assets/js/custom.js"></script>
+ </body>
+ </html>
