--- a/message.html
+++ b/message.html
@@ -49,7 +49,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="index.html">
+                        <a href="profile.html">
                             <i class="fa fa-user" aria-hidden="true"></i>
                             Profile
                         </a>
@@ -132,7 +132,7 @@
                     </header> 
                 <!-- message area start -->
                 <div class="row">
-                    <div class="col-xl-4 col-lg-7">
+                    <div class="col-xl-4 col-lg-6 ">
                         <section class="message-area">
                                <form class="search-bar">
                                    <input type="search"  id="search-here" placeholder="Search here">
@@ -240,7 +240,7 @@
                             </div>
                         </section>
                     </div>
-                    <div class="col-xl-8 col-lg-8">
+                    <div class="col-xl-8 col-lg-6 ">
                           <div class="tab-content" id="myTabContent">
                               <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                                 <div class="chat-content">
