--- a/search.html
+++ b/search.html
@@ -43,13 +43,13 @@
                           </a>
                     </li>
                     <li>
-                        <a href="index.html">
+                        <a href="appointment.html">
                             <i class="fa fa-calendar" aria-hidden="true"></i>
                             Appointment
                           </a>
                     </li>
                     <li>
-                        <a href="index.html">
+                        <a href="profile.html">
                             <i class="fa fa-user" aria-hidden="true"></i>
                             Profile
                           </a>
