--- a/editprofile.html
+++ b/editprofile.html
@@ -130,8 +130,131 @@
                             </div>
                         </div>
                     </header> 
+         <!-- editprofile area start -->
+         <div class="editprofile-area">
+            <h2>Personal Information</h2>
+            <div class="editprofile-wrep">
+                <form>
+                    <div class="photo-up">
+                        <img src="assets/images/home/profile-img-01.png" alt="photo-up">
+                        <div class="upload-btn-wrapper">
+                            <button class="up-btn">Upload New Photo</button>
+                            <input type="file" name="myfile" />
+                        </div>
+                        <div class="upload-btn-wrapper">
+                            <button class="up-btn up-delete">Delete</button>
+                        </div>
+                    </div>
+                    <div class="personal-item">
+                        <div class="personal-wrap">
+                            <label class="personal-title">First Name</label>
+                            <input class="personal-text" type="text" placeholder="john" required>
+                        </div>
+                        <div class="personal-wrap ">
+                            <label class="personal-title">Last Name</label>
+                            <input class="personal-text" type="text" placeholder="Doe" required>
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Email</label>
+                            <input class="personal-text" type="email" placeholder="johndoe@gmail.com" required>
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Phone No</label>
+                            <input class="personal-text" type="number" placeholder="+321 5236 562 3256" required maxlength="19">
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Address</label>
+                            <input class="personal-text" type="text" placeholder="Yonkers, NY 52635" required>
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Date of Birth</label>
+                            <input class="personal-text" type="date" placeholder="12/25/2000" required>
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Age</label>
+                            <input class="personal-text" type="number" placeholder="25" required maxlength="2">
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Gender</label>
+                            <select class="personal-text">
+                                <option value="">Male</option>
+                                <option value="">Female</option>
+                            </select>
+                        </div>
+                        <div class="personal-wrap">
+                            <label class="personal-title">Occupation</label>
+                            <select class="personal-text">
+                                <option value="">Business</option>
+                                <option value="">Business</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="introduc-area">
+                        <h4>Introduction</h4>
+                        <p>Purus morbi viverra libero etiam nisl tincidunt aliquam purus eget. Vel suspendisse dignissim nulla id justo. Tortor ac, eget in eget. Fames tincidunt eu posuere lectus felis, duis faucibus. Congue nunc mauris velit feugiat sed orci id. Vel tellus ut vitae massa integer netus laoreet.  Arcu ultricies pulvinar commodo penatibus.
+                        </p>
+                    </div>
+                    <div class="create-pass">
+                        <h2>Change Password</h2>
+                        <div class="personal-item">
+                            <div class="personal-wrap">
+                                <label class="personal-title">Old Password</label>
+                                <input class="personal-text" type="password" placeholder="john" required>
+                            </div>
+                            <div class="personal-wrap">
+                                <label class="personal-title">New Password</label>
+                                <input class="personal-text" type="password" placeholder="john" required>
+                            </div>
+                            <div class="personal-wrap">
+                                <label class="personal-title">Confirm New Password</label>
+                                <input class="personal-text" type="password" placeholder="john" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="create-pass">
+                        <h2>Medical Insurance</h2>
+                        <div class="personal-item">
+                            <div class="personal-wrap">
+                                <label class="personal-title">Membership No</label>
+                                <input class="personal-text" type="text" placeholder="USD11027636" required>
+                            </div>
+                            <div class="personal-wrap">
+                                <label class="personal-title">Scheme</label>
+                                <input class="personal-text" type="text" placeholder="Total Health Plan II" required>
+                            </div>
+                            <div class="personal-wrap">
+                                <label class="personal-title">Group Name</label>
+                                <input class="personal-text" type="text" placeholder="Total Tanzania Limited" required>
+                            </div>
+                            <div class="insurance-item">
+                                <div class="personal-wrap">
+                                    <label class="personal-title">Member Name</label>
+                                    <input class="personal-text" type="text" placeholder="John Doe" required>
+                                </div>
+                                <div class="personal-wrap">
+                                    <label class="personal-title">Principal Member</label>
+                                    <input class="personal-text" type="text" placeholder="Nikesh Mehta" required>
+                                </div>
+                                <div class="personal-wrap">
+                                    <label class="personal-title">Start Date</label>
+                                    <input class="personal-text" type="date" placeholder="01/01/2025" required>
+                                </div>
+                                <div class="personal-wrap">
+                                    <label class="personal-title">Date of Birth</label>
+                                    <input class="personal-text" type="date" placeholder="05/11/2013" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="save-btn">
+                        <input class="save-chang" type="submit" value="Save Changes">
+                    </div>
+                </form>
+            </div>
 
 
+
+         </div>
 
 
 
