--- a/checkout.html
+++ b/checkout.html
@@ -210,7 +210,7 @@
                         </div>
                         <div class="patient-data">
                             <label class="patient-title">Card Number</label>
-                            <input id="card-number" class="patient-placeholder" type="text" placeholder="1254 1256 3256 2154" required maxlength="19">
+                            <input id="card-number" class="patient-placeholder" type="number" placeholder="1254 1256 3256 2154" required maxlength="19">
                         </div>
                         <div class="row">
                             <div class="col-xl-6">
