--- a/profile.html
+++ b/profile.html
@@ -216,18 +216,20 @@
                                           </td>
                                           <td>Cardiogram</td>
                                           <td>10 Mar, 2021</td>
-                                         
-                                            <td class="view-payment-wepr">
-                                                <span class="compl-btn view-payment">View</span>
-                                                <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                            <td >
+                                                <a class="compl-btn view-payment" href="#">View</a>
                                             </td>
-                                         
-                                            <ul class="view-payment-item">
-                                                <li><i class="fa fa-trash-o" aria-hidden="true"></i>Remove</li>
-                                                <li><i class="fa fa-print" aria-hidden="true"></i>Print</li>
-                                                <li><i class="fa fa-floppy-o" aria-hidden="true"></i>Save as PDF</li>
-                                            </ul>
-                                        </tr>
+                                            <td >
+                                                <div class="view-payment-wepr">
+                                                    <i class="fa fa-ellipsis-v" aria-hidden="true">
+                                                    </i>
+                                                    <ul class="view-payment-item">
+                                                        <li><i class="fa fa-trash-o" aria-hidden="true"></i>Remove</li>
+                                                        <li><i class="fa fa-print" aria-hidden="true"></i>Print</li>
+                                                        <li><i class="fa fa-floppy-o" aria-hidden="true"></i>Save as PDF</li>
+                                                    </ul>
+                                                </div>
+                                            </td>
                                       </tbody>
                                       <tbody>
                                         <tr>
@@ -237,14 +239,19 @@
                                           <td>	Cardiogram</td>
                                           <td>10 Mar, 2021</td>
                                             <td class="view-payment-wepr">
-                                                <span class="compl-btn view-payment">View</span>
-                                                 <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                                <a class="compl-btn view-payment" href="#">View</a>
                                             </td>
-                                            <ul class="view-payment-item">
-                                            <li><i class="fa fa-trash-o" aria-hidden="true"></i>Remove</li>
-                                            <li><i class="fa fa-print" aria-hidden="true"></i>Print</li>
-                                            <li><i class="fa fa-floppy-o" aria-hidden="true"></i>Save as PDF</li>
-                                            </ul>
+                                            <td >
+                                                <div class="view-payment-wepr">
+                                                    <i class="fa fa-ellipsis-v" aria-hidden="true">
+                                                    </i>
+                                                    <ul class="view-payment-item">
+                                                        <li><i class="fa fa-trash-o" aria-hidden="true"></i>Remove</li>
+                                                        <li><i class="fa fa-print" aria-hidden="true"></i>Print</li>
+                                                        <li><i class="fa fa-floppy-o" aria-hidden="true"></i>Save as PDF</li>
+                                                    </ul>
+                                                </div>
+                                            </td>
                                         </tr>
                                       </tbody>
                                 </table>
